kubernetes_manifests/shipping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
        - name: cart
          image: <ACCOUNT_ID>.dkr.ecr.us-east-1.amazonaws.com/shipping:latest

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8080

          livenessProbe:
            httpGet:
              path: /health
              port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: shipping
spec:
  selector:
    app: shipping
  ports:
    - port: 8080
      targetPort: 8080
